# valera-control-tower

./: .gitignore  AGENTS.md  CODEX.md  README.md  requirements-dev.txt
agents/: README.md
dashboard/: __init__.py  render.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  agent-benchmark.md  architecture-hardware-integration.md  architecture.md  decisions.md  demo.md  hardware_bringup_v0.md  office-hours-valera-enterprise-robotics-poc.md  physical_demo_v1_tracking.md  physical_demo_video.md  product-brief.md  quest3_rosbridge_head_client_v0_1.md  roadmap.md  task-model.md  vr_gateway_ros2_runtime_smoke_v0_1.md  vr_gateway_ros2_transport_v0_1.md
enterprise/: README.md  __init__.py  schemas.py
robot/: README.md  __init__.py  adapter_runtime.py  adapter_sim_mission.py  arm_commands.py  events.py  evidence.py  hybrid_demo.py  live_camera.py  models.py  physical_demo.py  sim_executor.py  so_arm_protocol.py  state_machine.py  vision.py
scripts/: check_physical_demo_output.py  collect_hardware_inventory.py  (+15 more)
trackbot_description/: CMakeLists.txt  README.md  mesh_report.json  package.xml
trackbot_description/config/: isaac_sim_drives.yaml  kinematics.yaml
trackbot_description/meshes/parallel_gripper/collision/: clamp_1.stl  clamp_2.stl  link5_1.stl
trackbot_description/meshes/parallel_gripper/visual/: clamp_1.stl  clamp_2.stl  link5_1.stl
trackbot_description/meshes/visual/: left_front_idler.stl  left_rear_drive.stl  right_front_idler.stl  right_rear_drive.stl
trackbot_description/urdf/: trackbot_wiper_v2.urdf
(+122 files in other folders)
