<?xml version="1.0"?>
<package format="3">
  <name>trackbot_description</name>
  <version>0.1.0</version>
  <description>URDF description of the Valera TrackBot with SO-101 arm and parallel gripper.</description>
  <maintainer email="trackbot@localhost">Valera TrackBot team</maintainer>
  <license>Proprietary</license>
  <license>Apache-2.0</license>
  <license>GPL-3.0-only</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
